dropshot/tests/fail/bad_trait_channel9.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_trait_channel9.rs:19:7
   |
19 | trait MyServer {
   |       ^^^^^^^^

error: endpoint `bad_channel` must accept RequestContext<Self::Context> as its first argument
  --> tests/fail/bad_trait_channel9.rs:27:18
   |
27 |         _: Query<QueryParams>,
   |                  ^^^^^^^^^^^
